fix unable to scroll on mobile

--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -3,7 +3,7 @@
     /* critical sizing and position styles */
    font-size: 1.25em;
    width: 100%;
-   height: 100%;
+   height: 110%;
    position: fixed;
    margin-top: -5px;
    right: 0;
@@ -11,6 +11,7 @@
    /* non-critical appearance styles */
    list-style: none;
    background-color: rgba(238,174,202, .5);
+   background-size: cover;
 }
 
 .nav-item {
