--- a/src/components/SiteWrap/SiteWrap.css
+++ b/src/components/SiteWrap/SiteWrap.css
@@ -16,14 +16,14 @@
     /* Critical position and size styles */
   min-height: 100vh;
   min-width: 100vw;
-  position: relative;
+  position: fixed;
   top: 0;
   bottom: 100%;
   padding: 10px;
   z-index: 1; /* brings it in front of the nav menu*/
   background-color:  white; /* Needs a background or else the nav will show through */
-  overflow: hidden;
-  touch-action: none;
+  overflow: scroll;
+
   }
 
   .move-over {
